--- a/spec/user.yaml
+++ b/spec/user.yaml
@@ -22,11 +22,14 @@ paths:
         200:
           description: "Response"
           schema:
-            type: "object"
-            properties:
-              id:
-                type: "integer"
-                format: "int64"
-              name:
-                type: "string"
-                example: "name"
+            $ref: "#/definitions/User"
+
+definitions:
+  User:
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+        example: "name"
